# coinbase-market-data-rust

./: .gitignore  Cargo.toml  README.md
src/: clear_screen.rs  main.rs  menu.rs  models.rs  task_runner.rs  utils.rs
src/api/: candles.rs  market_trades.rs  mod.rs  product_book.rs  products.rs  server_time.rs  specific_product.rs
src/handlers/: candles_handler.rs  market_trades_handler.rs  mod.rs  product_book_handler.rs  products_handler.rs  server_time_handler.rs  specific_product_handler.rs
