[package]
name = "coinbase_api_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
prettytable = "0.10.0"
